final vesion ,gemnin api ,statistic,my submission,my competition,auto statsu change ,twililio sms