@@ -7,7 +7,7 @@
     <groupId>tn</groupId>
     <artifactId>learniverse</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Pidev-java</name>
+    <name>javaa</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,6 +24,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -51,6 +56,24 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.twilio.sdk/twilio -->
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>10.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+        <!-- Jackson JSON library -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
         <dependency>
             <groupId>net.synedra</groupId>
             <artifactId>validatorfx</artifactId>
@@ -94,11 +117,6 @@
             <artifactId>ikonli-materialdesign2-pack</artifactId>
             <version>12.3.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.kordamp.ikonli</groupId>
-            <artifactId>ikonli-material-pack</artifactId>
-            <version>12.3.1</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -110,6 +128,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -128,12 +147,6 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
-                            <vmArgs>
-                                --add-exports javafx.controls/com.sun.javafx.scene.control=tn.learniverse
-                                --add-exports javafx.web/com.sun.javafx.webkit=tn.learniverse
-                                --add-exports javafx.controls/com.sun.javafx.charts=tn.learniverse
-                                --add-exports javafx.graphics/com.sun.javafx.sg.prism=tn.learniverse
-                            </vmArgs>
                         </configuration>
                     </execution>
                 </executions>
